# fastapi

./: .gitignore  .pre-commit-config.yaml  lefthook.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml  development.yml  test.yml
api/: server.py
app/: main.py
app/api/: dependency.py  exception.py  server.py  string.py  util.py
app/api/router/: depdendency.py  user.py
app/api/router/answer/: request.py  response.py  router.py  string.py
app/api/router/auth/: exception.py  request.py  response.py  router.py  security.py  string.py
app/api/router/delete/: router.py  string.py
app/api/router/health/: router.py
app/api/router/question/: response.py  router.py  string.py
app/api/router/version/: router.py  string.py
app/api/util/: auth.py  header.py  language.py
app/core/: config.py  language.py  maufacturer.py  support_os.py
app/core/db/: model.py  session.py
app/core/util/: jwt.py
app/domain/: base.py  string.py
app/domain/datasource/: answer.py  language.py  question.py  user.py
app/domain/repository/: answer.py  base.py  question.py  user.py
app/domain/service/: answer.py  base.py  exception.py  jwt.py  question.py  user.py
core/: config.py
docker/: Dockerfile  docker-compose.yml
migration/: alembic.ini
migration/core/: config.py  env.py
migration/core/versions/: 30e2378da611_create_question_table.py  ba852a5526d6_create_default_user_table.py  ebef0846d19f_create_answer_table.py  f8ab1017d1df_create_language_table.py
test/: conftest.py
test/api/router/: conftest.py
test/api/router/integration/: test_answer.py  test_auth.py  test_delete.py  test_question.py  test_version.py
test/core/util/: test_jwt.py
test/domain/repository/: test_answer.py  test_question.py  test_user.py
test/domain/service/: test_jwt.py  test_user.py
