[tool.poetry]
name = "diary-backend"
version = "0.1.0"
description = ""
authors = ["Optimize Success <optimizesuccess4@gmail.com>"]
readme = "README.md"
packages = [{include = "diary_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
click = "^8.1.7"
pydantic-settings = "^2.0.3"


[tool.poetry.group.local.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# https://github.com/psf/black
target-versions = ["py37", "py38", "py39", "py310", "py311"]
line-length = 120
color = true

exclude = '.git'
[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 311
line_length = 120

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.flake8]
ignore = ["E501", "W503", "E203"]
exclude = [".git", "__init__.py"]
