[tool.poetry]
name = "diary-backend"
version = "0.1.0"
description = ""
authors = ["Optimize Success <optimizesuccess4@gmail.com>"]
readme = "README.md"
packages = [{include = "diary_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
click = "^8.1.7"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
greenlet = "^2.0.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
orjson = "^3.9.5"
result = "^0.13.1"
mypy = "^1.5.1"


[tool.poetry.group.local.dependencies]
pre-commit = "^3.3.3"


[tool.poetry.group.migration.dependencies]
alembic = "^1.11.3"
psycopg2-binary = "^2.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# https://github.com/psf/black
target-versions = ["py37", "py38", "py39", "py310", "py311"]
line-length = 120
color = true

exclude = '.git'
[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 311
line_length = 120

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.flake8]
ignore = ["E501", "W503", "E203"]
exclude = [".git", "__init__.py"]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
plugins = ["pydantic.mypy"]
python_version = 3.11
pretty = true
show_traceback = true
color_output = true

enable_incomplete_feature = "Unpack"
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
